--- a/angular-basic/src/app/app.component.html
+++ b/angular-basic/src/app/app.component.html
@@ -1,1 +1,6 @@
 <h2>This is App Component</h2>
+<input type="text" name="serverName" [(ngModel)]="serverName">
+<p >Server Name {{serverName}}</p>
+<ng-temple #noServer>
+  <p></p>
+</ng-temple>
